# pdf-highlight-ai-translator

./: .gitignore  LICENSE  README.md  pyproject.toml  repo_structure.md
pdfhl_trans/: __init__.py  main.py
pdfhl_trans/cache/: translation_cache.py
pdfhl_trans/cli/: interactive_cli.py
pdfhl_trans/config/: settings.py
pdfhl_trans/core/: annotation_writer.py  highlight_extractor.py  pdf_processor.py
pdfhl_trans/translation/: base_translator.py  gemini_translator.py
pdfhl_trans/utils/: logger.py  text_utils.py
